<resources>
    <string name="app_name">轻享</string>

    <string name="successfully_modify">修改成功</string>
    <string name="successfully_setting">设置成功</string>
    <string name="successfully_upload">上传成功</string>
    <string name="successfully_logout">退出登录成功</string>
    <string name="successfully_clear_cache">清理成功</string>
    <string name="error_network">网络不通畅哦~</string>
    <string name="error_login">暂未登录</string>
    <string name="error_set_content">没有设置任何内容哦~</string>
    <string name="error_web_source">链接有问题，请稍后重试！</string>

    <string name="permissions_hint">必须同意权限才能操作哦！</string>
    <string name="permanent_denial_permission">被永久拒绝授权，请手动授予权限</string>
    <string name="talk_to_you_later">下次再说</string>
    <string name="to_agree">去同意</string>

    <string name="nav_homepage">主页</string>
    <string name="nav_explore">发现</string>
    <string name="nav_me">我的</string>
    <string name="text_no_data">暂无数据哦~</string>
    <string name="mail">邮箱</string>
    <string name="mail_code_login">邮箱验证码登录</string>
    <string name="mail_password_login">邮箱密码登录</string>
    <string name="mail_code_login_hint">未注册邮箱验证通过后将自动注册</string>
    <string name="password_login_hint">密码登录</string>
    <string name="send_auth_code">获取验证码</string>
    <string name="auth_code">验证码</string>
    <string name="password">密码</string>
    <string name="user_agreement_hint">登录即代表您已同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="user_name_format">用户%04d</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="set_user_data">设置用户信息</string>
    <string name="user_name_hint">设置一个好听的名字吧！</string>
    <string name="skip">跳过</string>
    <string name="avatar_image_hint">点击可更换照片</string>
    <string name="confirm">确定</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="set_sex">设置性别</string>
    <string name="set_birthday">设置生日</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="date_format_save">%d-%02d-%02d</string>
    <string name="date_format_show">%s年%s月%s日</string>
    <string name="date_format_timestamp">yyyy年MM月dd日 hh:mm</string>
    <string name="photos">图库</string>
    <string name="camera">拍照</string>
    <string name="loading_hint">正在上传：%d%%</string>
    <string name="loading_hint_2">正在上传：%d/%d</string>
    <string name="successfully_registered">注册成功</string>
    <string name="successfully_send_auth_code">发送成功，请注意查收</string>
    <string name="start_app">开始</string>
    <string name="web_source">网页由 %s 提供</string>
    <string name="not_login_name">游客</string>
    <string name="not_login_subheading">点击可进行登录</string>
    <string name="shielding">足迹</string>
    <string name="text_zero">0</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="text_null">-</string>
    <string name="text_personal_center">个人中心</string>
    <string name="like">点赞</string>
    <string name="photo">图文</string>
    <string name="album">图册</string>
    <string name="login_overdue">登录已过期。</string>
    <string name="logout_hint">确定要退出登录吗？</string>
    <string name="cancel">取消</string>
    <string name="account_security">帐号安全</string>
    <string name="setting">设置</string>
    <string name="message_notification">消息通知</string>
    <string name="shielding_management">屏蔽管理</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_cache_hint">您确定要清除缓存吗？</string>
    <string name="clearing_cache">清理中…</string>
    <string name="about_software">关于软件</string>
    <string name="about_author">关于作者</string>
    <string name="check_updates">检查更新</string>
    <string name="user_info">个人信息</string>
    <string name="modify_password">修改密码</string>
    <string name="bind_mailbox">绑定邮箱</string>
    <string name="login_record">登录记录</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="sign_format">简介：%s</string>
    <string name="sign_null">暂无简介</string>
    <string name="friend">互相关注</string>
    <string name="cancel_attention">取消关注</string>
    <string name="cancel_attention_hint">您确定要取消关注[%s]吗？</string>
    <string name="append_attention">添加关注</string>
    <string name="user_name">昵称</string>
    <string name="sign">简介</string>
    <string name="avatar">头像</string>
    <string name="update_avatar">修改头像</string>
    <string name="update_sex">修改性别</string>
    <string name="update_birthday">修改生日</string>
    <string name="avatar_format">avatar/%d/img_%d.png</string>
    <string name="image_format">image/%d/img_%d.png</string>
    <string name="update_user_name">更新昵称</string>
    <string name="set_sign">设置简介</string>
    <string name="update_sign">更新简介</string>
    <string name="sign_hint">请输入个人简介~</string>
    <string name="nav_information">消息</string>
    <string name="system">系统</string>
    <string name="reply">回复</string>
    <string name="at_me">\@我</string>
    <string name="messages_empty">没有任何消息哦~</string>
    <string name="error_user_banned">帐号已被封禁</string>
    <string name="text_publish_image_text">发布图文</string>
    <string name="text_publish_photo_album">发布图册</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="classification">分类</string>
    <string name="display_style">显示样式</string>
    <string name="add_content">添加内容</string>
    <string name="error_image_delete">至少保留一张图片哦~</string>
    <string name="publish_image_text_title">添加文字说明...</string>
    <string name="publish_image_text_title_hint">请添加图片文字说明</string>
    <string name="display_style_complex">多图模式</string>
    <string name="display_style_simple">单图模式</string>
    <string name="please_choose">请选择</string>
    <string name="please_choose_classification">请选择分类</string>
    <string name="users_to_recommend">用户推荐：</string>
    <string name="to_login">去登录</string>
    <string name="main_to_explore">随便看看</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="search_history">搜索记录</string>
    <string name="search_history_state_show">显示更多</string>
    <string name="search_history_state_hide">隐藏</string>
    <string name="clear_search_history">清空历史记录</string>
    <string name="caption">文字说明：</string>
    <string name="text_details_image_text">图文详情</string>
    <string name="error_select_classification_over_maximum">最多选取六个分类</string>
    <string name="select_classification_title">请选择感兴趣分类（最多选择六项）：</string>
    <string name="select_classification_title_formart">请选择感兴趣分类（ %d / 6 ）：</string>
    <string name="submit">提交</string>

</resources>