<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.album.PublishImageTextFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/text_publish_image_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="6dp"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:itemCount="6"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:layout_editor_absoluteX="-38dp"
        tools:listitem="@layout/view_filter_image"
        tools:spanCount="4" />


    <View
        android:id="@+id/cut_off_rule_0"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="12dp"
        android:background="@color/black_translucence_eighty"
        app:layout_constraintTop_toBottomOf="@id/RecyclerView" />

    <EditText
        android:selectAllOnFocus="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:hint="@string/publish_image_text_title"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:textColor="@color/black_translucence_eighty"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RecyclerView" />

    <View
        android:id="@+id/cut_off_rule_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="12dp"
        android:layout_marginVertical="8dp"
        android:background="@color/black_translucence_eighty"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <!-- 选择分类 -->
    <LinearLayout
        android:id="@+id/classification_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cut_off_rule_1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classification"
            android:textColor="@color/black_translucence_eighty"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/classification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/please_choose"
            android:textColor="@color/black_translucence_eighty"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next_12" />

    </LinearLayout>

    <View
        android:id="@+id/cut_off_rule_2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="12dp"
        android:background="@color/black_translucence_eighty"
        app:layout_constraintTop_toBottomOf="@id/classification_layout" />

    <!-- 显示样式 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cut_off_rule_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_style"
            android:textColor="@color/black_translucence_eighty"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/btn_reminder_display_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="6dp"
            android:src="@drawable/ic_reminder_btn_16" />

        <RadioGroup
            android:id="@+id/rg_display_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/display_style_complex"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_style_complex"
                android:textColor="@color/black_translucence"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/display_style_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_style_simple"
                android:textColor="@color/black_translucence"
                android:textSize="14sp" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/share_btn"
        android:text="@string/share"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>