<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.user.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title=" "
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/SmartRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srlEnablePureScrollMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/mail_code_login"
                android:textColor="@color/black_translucence_eighty"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_code_login_hint"
                android:textColor="@color/black_translucence"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_title" />

            <EditText
                android:id="@+id/mail_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_subheading" />

            <ImageView
                android:id="@+id/clear_mail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_close_edit_18"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/mail_edit"
                app:layout_constraintEnd_toEndOf="@+id/mail_edit"
                app:layout_constraintTop_toTopOf="@+id/mail_edit"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/transition_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/password_login_hint"
                android:textColor="@color/black_translucence"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline" />

            <EditText
                android:id="@+id/auth_code_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/auth_code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_edit"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_edit" />

            <ImageView
                android:id="@+id/password_switch_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_password_hidden"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/password_edit"
                app:layout_constraintEnd_toEndOf="@+id/password_edit"
                app:layout_constraintTop_toTopOf="@+id/password_edit" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/mail_edit" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:enabled="false"
                android:text="@string/send_auth_code"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement_hint"
            android:textColor="@color/black_translucence"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/user_agreement_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>