<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_select_bottom"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/black_translucence_thirty"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp" />

    <Button
        android:id="@+id/btn_publish_image_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingVertical="0dp"
        app:rippleColor="@color/black_translucence_thirty"
        android:text="@string/text_publish_image_text"
        android:textColor="@color/black_translucence_eighty" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_translucence_thirty" />

    <Button
        android:id="@+id/btn_publish_photo_album"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/text_publish_photo_album"
        app:rippleColor="@color/black_translucence_thirty"
        android:textColor="@color/black_translucence_eighty" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_translucence_thirty" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:rippleColor="@color/black_translucence_thirty"
        android:text="@string/cancel"
        android:textColor="@color/black_translucence_eighty" />

</LinearLayout>