<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.album.SearchFragment">

    <!-- search view -->
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_search_24" />

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black_translucence_eighty"
            android:textColorHint="@color/black_translucence"
            android:textSize="16sp" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/search_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_close_20" />

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            android:textColor="@color/black_translucence"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/search_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_history"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_layout" />

    <TextView
        android:tag="hide"
        android:id="@+id/search_history_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        android:text="@string/search_history_state_show"
        android:textColor="@color/black_translucence"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/search_history_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_history_title" />

    <com.example.library.AutoFlowLayout
        android:paddingHorizontal="12dp"
        android:id="@+id/flow_layout"
        app:maxLines="3"
        tools:layout_height="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/search_history_title" />

    <TextView
        android:text="@string/clear_search_history"
        android:textColor="@color/black_translucence_eighty"
        android:textSize="13sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/flow_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="6dp"
        app:drawableStartCompat="@drawable/ic_delete_15" />

</androidx.constraintlayout.widget.ConstraintLayout>